# financial-agent

./: .gitignore  README.md  app.py  init_db.py  pyproject.toml  requirements.txt
docs/superpowers/specs/: 2026-03-19-financial-chat-design.md
static/: style.css
templates/: index.html
tests/: test_app.py  test_init_db.py
