[tool.poetry]
name = "financial-agent"
version = "0.1.0"
description = "LCL bank statement importer and AI-powered financial chat app"
authors = ["Hassan Alhajj"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
flask = ">=3.0"
anthropic = ">=0.40"
pandas = ">=2.0"
python-dotenv = ">=1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
